--- a/WEB/static/CSS/background.css
+++ b/WEB/static/CSS/background.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-image: url(Images/Permanent/space_bkg.jpg);
+    background-image: url(space_bkg.jpg);
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -8,7 +8,7 @@ body {
 
 header {
     width:100%;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.6),rgba(0, 0, 0, 0.6)) , url(Images/Permanent/CodeSnippet.png);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.6),rgba(0, 0, 0, 0.6)) , url(CodeSnippet.png);
     color: #fff;
     padding-block: 15px;
     text-align: center;
