added sliders to inputs instead of just input boxes

--- a/WEB/static/CSS/index.css
+++ b/WEB/static/CSS/index.css
@@ -21,7 +21,7 @@ h4 {
 }
 
 body {
-    background-color: #1e1e1e;
+    background-color: #282828;
     color: #ddd;
     font-family: Arial, sans-serif;
     margin: 0;
