--- a/WEB/static/CSS/inputs.css
+++ b/WEB/static/CSS/inputs.css
@@ -33,7 +33,7 @@ p {
 
 /* ------------------------------- FORM SECTION --------------------------------------- */
 form#gravsimArgs {
-    max-width: calc(100%/3); /* Adjust as needed */
+    max-width: calc(2*100%/3); /* Adjust as needed */
     margin: 0 auto; /* Centers the form */
     display: flex;
     flex-wrap: wrap;
@@ -41,7 +41,7 @@ form#gravsimArgs {
 }
 
 form#fluidArgs {
-    max-width: calc(100%/3); /* Adjust as needed */
+    max-width: calc(2*100%/3); /* Adjust as needed */
     margin: 0 auto; /* Centers the form */
     display: flex;
     flex-wrap: wrap;
@@ -49,7 +49,7 @@ form#fluidArgs {
 }
 
 form#bounceArgs {
-    max-width: calc(100%/3); /* Adjust as needed */
+    max-width: calc(2*100%/3); /* Adjust as needed */
     margin: 0 auto; /* Centers the form */
     display: flex;
     flex-wrap: wrap;
@@ -57,7 +57,7 @@ form#bounceArgs {
 }
 
 form#orbitArgs {
-    max-width: calc(100%/3); /* Adjust as needed */
+    max-width: calc(2*100%/3); /* Adjust as needed */
     margin: 0 auto; /* Centers the form */
     display: flex;
     flex-wrap: wrap;
@@ -81,7 +81,7 @@ form#orbitArgs {
 .input-group-size {
     margin-top: 8px;
     margin-bottom: 8px;
-    width: calc(50% - 10px); /* Adjust width for X */
+    width: calc(100% - 10px); /* Adjust width for X */
 }
 
 .input-group-numthing {
@@ -105,12 +105,13 @@ form#orbitArgs {
 /* ------------------------------- INPUT SECTION --------------------------------------- */
 /* Basic input field styling */
 input[type="number"] {
+    display: inline;
     padding: 8px;
     border: none;
     border-radius: 5px;
     background-color: black;
     color: white;
-    width: 100%;
+    width: 30%;
     box-sizing: border-box; /* Ensures padding is included in width */
     font-size: 16px;
     transition-duration: 0.4s;
