--- a/WEB/static/CSS/inputs.css
+++ b/WEB/static/CSS/inputs.css
@@ -116,6 +116,21 @@ input[type="number"] {
     font-size: 16px;
     transition-duration: 0.4s;
 }
+
+.checkBoxInput {
+    
+}
+
+input[type="checkbox"] {
+    display: inline;
+    padding: 8px;
+    border: none;
+    border-radius: 5px;
+    background-color: black;
+    color: white;
+    font-size: 16px;
+    transition-duration: 0.4s;
+}
   
 /* Placeholder color */
 input[type="number"]::placeholder {
